--- a/galeria-de-imagens/style.css
+++ b/galeria-de-imagens/style.css
@@ -32,6 +32,7 @@ h1 {
     text-shadow: 0px 4px 12px rgba(0, 0, 0, 0.555);
 }
 
+/* Theme Switch */
 
 .button {
     display: flex;
@@ -76,8 +77,11 @@ label i {
     background: white;
 }
 
+/*  */
+
 .container {
-    width: 97%;
+    width: 90%;
+    min-height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
