--- a/galeria-de-imagens/style.css
+++ b/galeria-de-imagens/style.css
@@ -89,14 +89,41 @@ label i {
     flex-wrap: wrap;
 }
 
-img {
+.card-img {
+    position: relative;
     width: 20rem;
     height: 16rem;
-    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+img {
+    /* width: 20rem;
+    height: 16rem; */
+    width: 100%;
+    height: 100%;
+    /* cursor: pointer; */
     padding: 10px;
 }
 
-img:hover {
+.view {
+    position: absolute;
+    background-color: transparent;
+    /* transition: .3s all; */
+    background: #B4930B;
+    /* background: transparent; */
+    /* padding: 105px 135px; */
+    padding: 10px;
+    border-radius: 50%;
+    cursor: pointer;
+    opacity: 0;
+    z-index: 2;
+    /* box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px; */
+}
+
+.view:hover {
+    opacity: 1;
     animation: select .3s forwards;
 }
 
@@ -108,6 +135,21 @@ img:hover {
         transform: translate3d(0, -3px, 0);
     }
 }
+
+/* .img-container {
+    width: 70rem;
+    height: 33rem;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    position: fixed;
+    background: rgba(0, 0, 0, 0.315);
+    opacity: 1;
+}
+
+#full-screen-img {
+    width: 50%;
+} */
 
 /* Footer */
 
