--- a/galeria-de-imagens/style.css
+++ b/galeria-de-imagens/style.css
@@ -98,39 +98,61 @@ img {
     padding: 10px;
 }
 
-img:hover {
-    animation: select .3s forwards;
-}
-
-
-@keyframes select {
-    from {
-        transform: translate3d(0, 0, 0);
-    }
-    to {
-        transform: translate3d(0, -3px, 0);
-    }
-}
-
 .img-container {
-    width: 65rem;
+    width: 50rem;
     height: 33rem;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     position: fixed;
-    background: rgba(0, 0, 0, 0.479);
+    background: rgba(0, 0, 0, 0.753);
     border-radius: 5px;
-    opacity: 1;
+    opacity: 0;
     pointer-events: none;
     z-index: 3;
-    /* display: flex; */
+    display: flex;
+    color: #fff;
+    justify-content: space-evenly;
+    align-items: center;
 }
 
-.img-container {
-    display: none;
+.img-container.active {
+    opacity: 1;
+    pointer-events: auto;
 }
 
+.img-container img {
+    width: 35rem;
+    height: 30rem;
+}
+
+.img-container .close {
+    position: absolute;
+    right: -1%;
+    top: -1%;
+    cursor: pointer;
+    background: #B4930B;
+    padding: 1%;
+    border-radius: 50%;
+    border: 1px solid white;
+    box-shadow: #B4930B 0px 4px 5px -2px, #B4930B 0px 0px 0px 1px;
+}
+
+.back, .next {
+    background-color: #B4930B;
+    padding: 40%;
+    border-radius: 50%;
+    border: 1px solid white;
+    cursor: pointer;
+    box-shadow: #B4930B 0px 4px 5px -2px, #B4930B 0px 0px 0px 1px;
+    user-select: none;
+    opacity: 0;
+    transition: .3s all;
+}
+
+.back:hover, .next:hover {
+    opacity: 1;
+}
 /* Footer */
 
 footer {
@@ -188,4 +210,56 @@ footer a:hover {
     opacity: 1;
     pointer-events: auto;
     box-shadow: #B4930B 0px 4px 5px -2px, #B4930B 0px 0px 0px 1px;
+}
+
+@media (max-width: 880px) {
+    .img-container {
+        width: 40rem;
+        height: 25rem;
+    }
+
+    .img-container img {
+        width: 28rem;
+        height: 20rem;
+    }
+
+    .back, .next {
+        padding: 25%;
+        border-radius: 50%;
+        border: 1px solid white;
+        cursor: pointer;
+        box-shadow: #B4930B 0px 4px 5px -2px, #B4930B 0px 0px 0px 1px;
+        user-select: none;
+        opacity: 1;
+    }
+
+}
+
+@media (max-width: 710px) {
+    .img-container {
+        width: 25rem;
+        height: 20rem;
+    }
+
+    .img-container img {
+        width: 20rem;
+        height: 15rem;
+    }
+
+}
+
+@media (max-width: 470px) {
+    .img-container {
+        width: 22rem;
+        height: 18rem;
+    }
+
+    .img-container img {
+        width: 20rem;
+        height: 15rem;
+    }
+
+    .back, .next {
+        opacity: 1;
+    }
 }
